# lumen

./: .env.example  .gitignore  README.md  pyproject.toml
apps/api/src/lumen_api/: __init__.py  app.py  config.py  db.py  deps.py  models.py  store.py  worker_main.py
apps/api/src/lumen_api/services/: __init__.py  markdown_renderer.py  prompt_builder.py  summarizer.py  worker.py
apps/api/tests/: conftest.py  test_config.py  test_job_status_api.py  test_learning_note_api.py  test_learning_note_postgres_integration.py  test_platform_service.py  test_summarizer.py  test_worker.py
apps/web/: README.md
deployment/: docker-compose.yaml
scripts/: obsidian_smoke.py  run_api.py  run_worker.py
skills/lumen-learning-note/: SKILL.md
skills/lumen-learning-note/examples/: curl-example.md  learning-note-request.json
